# lorecheck

./: .gitignore  README.md  pyproject.toml
lorecheck/: ingest.py
