[project]
name = "lorecheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-huggingface>=0.3.0",
    "mwxml>=0.3.6",
    "tqdm>=4.67.1",
]
